--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,3 +1,5 @@
-#Fri Dec 21 15:09:34 CET 2012
 eclipse.preferences.version=1
 include_path=0;/wt-orbis
+phpVersion=php5.3
+useShortTags=false
+use_asp_tags_as_php=false
