--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   "license": "GPL",
   "homepage": "https://github.com/pronamic/wt-orbis",
   "devDependencies": {
-    "grunt": "~0.4.2",
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-uglify": "^0.5.1",
     "grunt-phplint": "0.0.5",
     "grunt-wp-i18n": "~0.4.0"
   }
